--- a/build.xml
+++ b/build.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0"?>
 
-<project name="Classe Date">
-	<target name="init">
-		<mkdir dir="classes" />
-		<mkdir dir="build" />
-	</target>
-	<target name="compile" depends="init">
-		<javac srcdir="src" destdir="classes" />
-	</target>
-	<target name="build" depends="compile">
-		<jar destfile="build/date.jar" basedir="classes" />
-	</target>
-	<target name="clean">
-		<delete dir="classes" />
-		<delete dir="build" />
-	</target>
+<project name="Classe Date" basedir="." default="todo">
+    <property name="src" value="src"/>
+    <property name="classes" value="classes"/>
+    <property name="conf" value="etc"/>
+
+
+    <target name="clean">
+      <delete dir="${classes}"/>
+    </target>
+
+    <target name="compile" depends="clean">
+      <mkdir dir="${classes}"/>
+      <mkdir dir="${conf}"/>
+      <javac includeantruntime="false" srcdir="${src}" destdir="${classes}"/>
+      <echo message="Compiling...done"/>
+    </target>
+
+    <target name="run" depends="compile">
+      <java classname="Menu2">
+         <classpath>
+              <pathelement path="${classes}"/>
+         </classpath>
+      </java>
+    </target>
+
+    <target name="todo" depends="compile, run"/>
+
 </project>
